--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
